fix: jwt auth filter and traceid provider